--- a/SpringMVC1/pom.xml
+++ b/SpringMVC1/pom.xml
@@ -9,13 +9,13 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>Example1</artifactId>
+	<artifactId>SpringMVC</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Example1</name>
+	<name>SpringMVC</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>14</java.version>
 	</properties>
 
 	<dependencies>
