--- a/SpringBootJDBCSimple/src/main/resources/application.properties
+++ b/SpringBootJDBCSimple/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+spring.datasource.url=jdbc:mysql://localhost:3306/springsample1
+spring.datasource.username=springsample1
+spring.datasource.password=Functn21;
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
