--- a/springboot2-jpa-crud-example/build.gradle
+++ b/springboot2-jpa-crud-example/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'war'
 }
 
-group = 'com.wade.spring'
+group = 'net.guides.springboot2'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '14'
 
@@ -17,11 +17,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
