--- a/springboot2-jpa-crud-example/src/main/resources/application.properties
+++ b/springboot2-jpa-crud-example/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/users_database?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url=jdbc:mysql://localhost:3306/springsample2
+spring.datasource.username=springsample2
+spring.datasource.password=springsample2;
 
 
 ## Hibernate Properties
