--- a/springboot2-jpa-crud-example/build.gradle
+++ b/springboot2-jpa-crud-example/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'war'
 }
 
-group = 'net.guides.springboot2'
+group = 'com.wade.spring'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '14'
 
